--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,22 @@ body {
   border: 0;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .text-blur {
   position: relative;
   overflow: hidden;
